--- a/DataPassingUsingSegue/Base.lproj/Main.storyboard
+++ b/DataPassingUsingSegue/Base.lproj/Main.storyboard
@@ -1,24 +1,194 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="WvP-ee-eDh">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--List-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="MainViewController" customModule="DataPassingUsingSegue" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="jc1-SD-dC4">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="CustomCell" rowHeight="58" id="yDz-Fl-TpV" customClass="CustomCell" customModule="DataPassingUsingSegue" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="58"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="yDz-Fl-TpV" id="SUX-Ny-Zzb">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="57.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o9D-o9-pPd">
+                                                    <rect key="frame" x="8" y="6" width="310" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qe9-Bb-8y3">
+                                                    <rect key="frame" x="326" y="18" width="42" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PPh-kw-r3k">
+                                                    <rect key="frame" x="8" y="29" width="35.5" height="17"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="Qe9-Bb-8y3" firstAttribute="trailing" secondItem="SUX-Ny-Zzb" secondAttribute="trailingMargin" constant="8" id="16O-1q-chh"/>
+                                                <constraint firstItem="Qe9-Bb-8y3" firstAttribute="leading" secondItem="o9D-o9-pPd" secondAttribute="trailing" constant="8" id="83I-F5-Nl3"/>
+                                                <constraint firstItem="Qe9-Bb-8y3" firstAttribute="centerY" secondItem="SUX-Ny-Zzb" secondAttribute="centerY" id="Fz0-1w-FPA"/>
+                                                <constraint firstItem="o9D-o9-pPd" firstAttribute="leading" secondItem="SUX-Ny-Zzb" secondAttribute="leading" constant="8" id="HUE-a4-F0N"/>
+                                                <constraint firstItem="PPh-kw-r3k" firstAttribute="top" secondItem="o9D-o9-pPd" secondAttribute="bottom" constant="2" id="LZs-Hg-bEU"/>
+                                                <constraint firstItem="o9D-o9-pPd" firstAttribute="top" secondItem="SUX-Ny-Zzb" secondAttribute="top" constant="6" id="eZT-rV-23l"/>
+                                                <constraint firstItem="PPh-kw-r3k" firstAttribute="leading" secondItem="SUX-Ny-Zzb" secondAttribute="leading" constant="8" id="hj5-LB-mi1"/>
+                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="PPh-kw-r3k" secondAttribute="trailing" constant="20" symbolic="YES" id="wq2-TY-7lX"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="lblCounter" destination="Qe9-Bb-8y3" id="zp2-v4-drN"/>
+                                            <outlet property="lblDesc" destination="PPh-kw-r3k" id="g5l-mT-FlT"/>
+                                            <outlet property="lblTitle" destination="o9D-o9-pPd" id="Q3j-5H-NSt"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="ddA-0E-IwG"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="stv-pn-8lc"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="jc1-SD-dC4" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="3MQ-YY-gSb"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="jc1-SD-dC4" secondAttribute="trailing" id="9Yb-2I-vMj"/>
+                            <constraint firstItem="jc1-SD-dC4" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="TZi-zt-iA0"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="jc1-SD-dC4" secondAttribute="bottom" id="zNe-w3-PFb"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" title="List" id="3S4-BK-wZv">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="mab-dg-RhA">
+                            <connections>
+                                <segue destination="vmo-79-5KI" kind="show" id="SQy-9p-IDr"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="tblDataList" destination="jc1-SD-dC4" id="Qix-4N-wRI"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="965.60000000000002" y="117.39130434782609"/>
+        </scene>
+        <!--SecondVC-->
+        <scene sceneID="Bcz-Dq-rFs">
+            <objects>
+                <viewController storyboardIdentifier="SecondVC" id="vmo-79-5KI" customClass="SecondVC" customModule="DataPassingUsingSegue" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="DXd-as-WF4">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="Xhu-8o-KPL" userLabel="txtStack View">
+                                <rect key="frame" x="10" y="74" width="355" height="102"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eBT-wB-ACX">
+                                        <rect key="frame" x="0.0" y="0.0" width="355" height="30"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                        <connections>
+                                            <outlet property="delegate" destination="vmo-79-5KI" id="xZH-L6-YY1"/>
+                                        </connections>
+                                    </textField>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Age" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ZEI-AT-Kvj">
+                                        <rect key="frame" x="0.0" y="36" width="355" height="30"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                        <connections>
+                                            <outlet property="delegate" destination="vmo-79-5KI" id="e3L-7i-Hz6"/>
+                                        </connections>
+                                    </textField>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Select Date" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="spN-Nx-v9e">
+                                        <rect key="frame" x="0.0" y="72" width="355" height="30"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                        <connections>
+                                            <outlet property="delegate" destination="vmo-79-5KI" id="4j2-2q-76g"/>
+                                        </connections>
+                                    </textField>
+                                </subviews>
+                            </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KiV-17-PcG">
+                                <rect key="frame" x="10" y="196" width="355" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="qhk-I8-grT"/>
+                                </constraints>
+                                <state key="normal" title="Save"/>
+                                <connections>
+                                    <action selector="btnSaveAction:" destination="vmo-79-5KI" eventType="touchUpInside" id="NNW-9h-j8P"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="fE0-ZR-gUF" firstAttribute="trailing" secondItem="Xhu-8o-KPL" secondAttribute="trailing" constant="10" id="Ic5-yH-bun"/>
+                            <constraint firstItem="KiV-17-PcG" firstAttribute="top" secondItem="Xhu-8o-KPL" secondAttribute="bottom" constant="20" id="Jq6-rl-5Rq"/>
+                            <constraint firstItem="Xhu-8o-KPL" firstAttribute="leading" secondItem="fE0-ZR-gUF" secondAttribute="leading" constant="10" id="mEE-Mg-C1d"/>
+                            <constraint firstItem="fE0-ZR-gUF" firstAttribute="trailing" secondItem="KiV-17-PcG" secondAttribute="trailing" constant="10" id="sUB-p3-PJo"/>
+                            <constraint firstItem="Xhu-8o-KPL" firstAttribute="top" secondItem="fE0-ZR-gUF" secondAttribute="top" constant="10" id="uLY-Kj-MXI"/>
+                            <constraint firstItem="KiV-17-PcG" firstAttribute="leading" secondItem="fE0-ZR-gUF" secondAttribute="leading" constant="10" id="yev-Jd-Kfz"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="fE0-ZR-gUF"/>
+                    </view>
+                    <connections>
+                        <outlet property="btnSave" destination="KiV-17-PcG" id="Zkb-v1-E6l"/>
+                        <outlet property="txtAge" destination="ZEI-AT-Kvj" id="gDK-lY-dXH"/>
+                        <outlet property="txtDate" destination="spN-Nx-v9e" id="k20-yM-e9i"/>
+                        <outlet property="txtName" destination="eBT-wB-ACX" id="eBD-Np-PoY"/>
+                        <segue destination="jj1-OR-sux" kind="unwind" identifier="unwindToMainVCWithSegue" unwindAction="unwindToMainVCWithSegue:" id="ghR-7d-bVn"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bWU-Ue-H90" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="jj1-OR-sux" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="1768.8" y="117.39130434782609"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="NtA-eK-g8H">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="WvP-ee-eDh" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="dJ7-L5-hqn">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="RXP-E1-7gC"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4Qz-we-VDx" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="244" y="118"/>
         </scene>
     </scenes>
 </document>
